crates/warden-jarmeta/tests/snapshots/corpus__fabric-1.20.1-iris.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "fabric-1.20.1-iris (Minecraft 1.20.1, loader fabric)"
---
{
  "descriptors": [
    "fabricModJson",
    "manifest"
  ],
  "mods": [
    {
      "source": "fabricModJson",
      "loader": "fabric",
      "id": "iris",
      "version": "1.7.6+mc1.20.1",
      "name": "Iris",
      "description": "A modern shaders mod for Minecraft intended to be compatible with existing OptiFine shader packs",
      "authors": [
        "coderbot",
        "IMS212",
        "Justsnoopy30",
        "FoundationGames"
      ],
      "licenses": [
        "LGPL-3.0-only"
      ],
      "environment": "client",
      "dependencies": [
        {
          "id": "fabricloader",
          "kind": "required",
          "range": {
            "dialect": "fabric",
            "predicates": [
              ">=0.12.3"
            ]
          }
        },
        {
          "id": "minecraft",
          "kind": "required",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "1.20.1"
            ]
          }
        },
        {
          "id": "sodium",
          "kind": "required",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "0.5.x"
            ]
          }
        },
        {
          "id": "batchedentityrendering",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "*"
            ]
          }
        },
        {
          "id": "bedrockwaters",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=1.6.0"
            ]
          }
        },
        {
          "id": "canvas",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "*"
            ]
          }
        },
        {
          "id": "colormatic",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=3.0.0"
            ]
          }
        },
        {
          "id": "distanthorizons",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=2.0.1"
            ]
          }
        },
        {
          "id": "immersive_portals",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=1.4.2"
            ]
          }
        },
        {
          "id": "iris-explorer",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "*"
            ]
          }
        },
        {
          "id": "optifabric",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "*"
            ]
          }
        },
        {
          "id": "originsenhanced",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=1.3.2"
            ]
          }
        },
        {
          "id": "physicsmod",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<=3.0.13"
            ]
          }
        },
        {
          "id": "worldeditcui",
          "kind": "breaks",
          "range": {
            "dialect": "fabric",
            "predicates": [
              "<1.18.1"
            ]
          }
        }
      ],
      "minecraft": {
        "dialect": "fabric",
        "predicates": [
          "1.20.1"
        ]
      },
      "loaderVersion": {
        "dialect": "fabric",
        "predicates": [
          ">=0.12.3"
        ]
      },
      "mixins": [
        "mixins.iris.json",
        "iris-batched-entity-rendering.mixins.json",
        "mixins.iris.fantastic.json",
        "mixins.iris.vertexformat.json",
        "mixins.iris.bettermipmaps.json",
        "mixins.iris.compat.indigo.json",
        "mixins.iris.compat.sodium.json",
        "mixins.iris.compat.indium.json",
        "mixins.iris.fixes.maxfpscrash.json"
      ]
    }
  ],
  "manifest": {},
  "classVersion": {
    "major": 61,
    "minor": 0
  },
  "nested": [
    {
      "path": "META-INF/jars/antlr4-runtime-4.13.1.jar",
      "declaredBy": "fabricModJson",
      "metadata": {
        "descriptors": [
          "fabricModJson",
          "manifest"
        ],
        "mods": [
          {
            "source": "fabricModJson",
            "loader": "fabric",
            "id": "org_antlr_antlr4-runtime",
            "version": "4.13.1",
            "name": "antlr4-runtime"
          }
        ],
        "manifest": {
          "implementationTitle": "ANTLR 4 Runtime",
          "implementationVersion": "4.13.1",
          "automaticModuleName": "org.antlr.antlr4.runtime"
        },
        "classVersion": {
          "major": 52,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jars/fabric-api-base-0.4.31+1802ada577.jar",
      "declaredBy": "fabricModJson",
      "metadata": {
        "descriptors": [
          "fabricModJson",
          "manifest"
        ],
        "mods": [
          {
            "source": "fabricModJson",
            "loader": "fabric",
            "id": "fabric-api-base",
            "version": "0.4.31+1802ada577",
            "name": "Fabric API Base",
            "description": "Contains the essentials for Fabric API modules.",
            "authors": [
              "FabricMC"
            ],
            "licenses": [
              "Apache-2.0"
            ],
            "dependencies": [
              {
                "id": "fabricloader",
                "kind": "required",
                "range": {
                  "dialect": "fabric",
                  "predicates": [
                    ">=0.4.0"
                  ]
                }
              }
            ],
            "loaderVersion": {
              "dialect": "fabric",
              "predicates": [
                ">=0.4.0"
              ]
            }
          }
        ],
        "manifest": {},
        "classVersion": {
          "major": 61,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jars/fabric-key-binding-api-v1-1.0.37+1802ada577.jar",
      "declaredBy": "fabricModJson",
      "metadata": {
        "descriptors": [
          "fabricModJson",
          "manifest"
        ],
        "mods": [
          {
            "source": "fabricModJson",
            "loader": "fabric",
            "id": "fabric-key-binding-api-v1",
            "version": "1.0.37+1802ada577",
            "name": "Fabric Key Binding API (v1)",
            "description": "Key Binding registry API.",
            "authors": [
              "FabricMC"
            ],
            "licenses": [
              "Apache-2.0"
            ],
            "environment": "client",
            "dependencies": [
              {
                "id": "fabricloader",
                "kind": "required",
                "range": {
                  "dialect": "fabric",
                  "predicates": [
                    ">=0.4.0"
                  ]
                }
              }
            ],
            "loaderVersion": {
              "dialect": "fabric",
              "predicates": [
                ">=0.4.0"
              ]
            },
            "mixins": [
              "fabric-key-binding-api-v1.mixins.json"
            ]
          }
        ],
        "manifest": {},
        "classVersion": {
          "major": 61,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jars/glsl-transformer-2.0.1.jar",
      "declaredBy": "fabricModJson",
      "metadata": {
        "descriptors": [
          "fabricModJson",
          "manifest"
        ],
        "mods": [
          {
            "source": "fabricModJson",
            "loader": "fabric",
            "id": "io_github_douira_glsl-transformer",
            "version": "2.0.1",
            "name": "glsl-transformer"
          }
        ],
        "manifest": {},
        "classVersion": {
          "major": 61,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jars/jcpp-1.4.14.jar",
      "declaredBy": "fabricModJson",
      "metadata": {
        "descriptors": [
          "fabricModJson",
          "manifest"
        ],
        "mods": [
          {
            "source": "fabricModJson",
            "loader": "fabric",
            "id": "org_anarres_jcpp",
            "version": "1.4.14",
            "name": "jcpp"
          }
        ],
        "manifest": {
          "implementationTitle": "org.anarres#jcpp;1.4.14",
          "implementationVersion": "1.4.14"
        },
        "classVersion": {
          "major": 49,
          "minor": 0
        }
      }
    }
  ]
}
